# QCIF_health_data_regulations

./: QCIF_health_data_assistant_v1.py  README.md  legal_document_data.xlsx  legal_document_data_wide.xlsx  pyproject.toml
