[tool.poetry]
name = "qcif-health-data-regulations"
version = "0.1.0"
description = ""
authors = ["Steve Bickley"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
ffmpeg = "^1.4"
numpy = "^2.2.3"
openai = "^1.65.2"
openpyxl = "^3.1.5"
requests = "^2.32.3"
opencv-python = "^4.11.0.86"
pydantic = "^2.10.6"
pymupdf = "^1.25.3"
pillow = "^11.1.0"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
